tui/src/snapshots/agere_tui__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
