tui/src/snapshots/agere_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
•
        Bash(first_token_is_
        long_enough_to_wrap
        second_token_is_also
        _long_enough_to_wrap
        )
  └ (no output)
