tui/src/snapshots/agere_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Bash(echo
        this_is_a_very_long_
        single_token_that_wi
        ll_wrap_across_the_a
        vailable_width)
  └ error: first line on
    stderr
    error: second line on
    stderr
