tui/src/snapshots/agere_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭─────────────────────────────────────╮
│ >_ Open Agere (v0.0.1)            │
│                                     │
│ model:     gpt-5   /model to change │
│ directory: /tmp/project             │
╰─────────────────────────────────────╯

  Tip: Model just became available
